@@ -5,7 +5,7 @@
 # of which can be found in the main directory of this project.
 Gentoo Linux Installer
 
-$Id: GLIArchitectureTemplate.py,v 1.258 2006/02/07 02:05:38 agaffney Exp $
+$Id: GLIArchitectureTemplate.py,v 1.259 2006/02/09 22:37:23 agaffney Exp $
 
 The ArchitectureTemplate is largely meant to be an abstract class and an 
 interface (yes, it is both at the same time!). The purpose of this is to create 
@@ -254,6 +254,13 @@ class ArchitectureTemplate:
 				syspkgs.close()
 			except:
 				raise GLIException("CreateStage3Error", "fatal", "unpack_stage_tarball", "Could not open /usr/livecd/systempkgs.txt")
+
+			# Pre-create /lib (and possible /lib32 and /lib64)
+			if os.path.islink("/lib") and os.readlink("/lib").startswith("/lib64"):
+				if self._debug: self._logger.log("DEBUG: unpack_stage_tarball(): precreating /lib64 dir and /lib -> /lib64 symlink because glibc/portage sucks")
+				if not GLIUtility.exitsuccess(GLIUtility.spawn("mkdir " + self._chroot_dir + "/lib64 && ln -s /lib64 " + self._chroot_dir + "/lib")):
+					raise GLIException("CreateStage3Error", "fatal", "unpack_stage_tarball", "Could not precreate /lib64 dir and /lib -> /lib64 symlink")
+
 			syspkglen = len(systempkgs)
 			for i, pkg in enumerate(systempkgs):
 				pkg = pkg.strip()
