@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.589 2006/02/09 00:44:34 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.590 2006/02/09 22:37:23 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  9 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIArchitectureTemplate.py:
+  pre-create /lib64 dir and /lib -> /lib64 symlink if it exists on livecd
 
   8 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
